--- a/css/style-index.css
+++ b/css/style-index.css
@@ -11,7 +11,7 @@ body{
 
 #wrapper
 {
-	width: 1050px;
+	width: 1300px;
 	margin: 0 auto;
 }
 
@@ -96,12 +96,12 @@ article
 	
 	.col-index
 	{
-		background-attachment: fixed;
-		background-position: center;
 		width: 100%;
 		padding: 0;
-		background-color:rgb(8, 158, 218);
+		background-color:rgba(0, 202, 142, 0.842);
 	}
+	
+	
 
 	.div-title-banner{
 		margin: 45px;
@@ -124,6 +124,19 @@ article
 		padding: 10px 15px 10px 15px;
 		font-size: 16px;
 		border-radius: 5px;
+	}.right{
+		margin-right: 45px;
+		position: relative;
+		float: right;
+	} .div-father{
+		top: 360px;
+		width: 100%;
+		height: auto;
+		display: inline;
+		position: relative;
+		z-index: 1;
+	}.transparent{
+		background-color: transparent;
 	}
 
 	.card
