--- a/css/style-index.css
+++ b/css/style-index.css
@@ -25,6 +25,7 @@ header
 }
 
 
+
 .menu-fixed{
 	margin: 0;
 	position: fixed;
@@ -141,9 +142,17 @@ article
 
 	.card
 	{
-		background-color: #D1D1D1;
+		background-color: rgba(0, 0, 0, 0.842);
 		width: 50%;
 	}
+	
+	.footer{
+		width: 100%;
+		height: 300px;
+		background-color: #000;
+		z-index: 1;
+	}
+	
 
 @media screen and (max-width: 960px){
 
