--- a/css/style-index.css
+++ b/css/style-index.css
@@ -76,6 +76,16 @@ header
 	box-shadow: 1px 1px #1784c7;
 }
 
+.alert{
+	display: none;
+	position: relative;
+	background-color: #f00;
+	color: #fff;
+	height: 20px;
+	font-size: 15px;
+	text-align: center;
+}
+
 #btnLogin{
 	float: right;
 	margin-right: 30px;
@@ -142,6 +152,7 @@ article
 
 	.card
 	{
+		margin: 0px;
 		background-color: rgba(33, 36, 61, 0.37);
 		width: 50%;
 		color: #fff;
@@ -160,7 +171,7 @@ article
 	.footer{
 		width: 100%;
 		height: 300px;
-		background-color: #000;
+		background-color: rgba(0, 202, 142, 0.842);
 		z-index: 1;
 	}
 	
@@ -174,12 +185,26 @@ article
 	}
 }
 
-@media screen and (max-width: 640px){
+@media screen and (max-width: 775px){
 
 	#wrapper
 	{
 		width: 100%;
 		margin: 0 auto;
+	}
+	.menu-links{
+		display: none;
+	}
+	.logo-nav{
+		display: block;
+	}
+	.card{
+		width: 100%;
+		margin: 0 auto;
+	}
+	.p-card-index{
+		margin-right: 50px;
+		text-align: left;	
 	}
 }
 
@@ -197,7 +222,6 @@ article
 	.card
 	{
 		width: 100%;
-		
 	}
 
 	header
@@ -226,3 +250,95 @@ article
 	background-color: rgb(24, 13, 91);
 	}
 }
+
+
+
+.cd-nav-trigger {
+	/* navigation trigger - visible on mobile devices only */
+	float: right;
+	position: relative;
+	display: block;
+	width: 34px;
+	height: 44px;
+	margin-right: 5%;
+	/* hide text */
+	overflow: hidden;
+	white-space: nowrap;
+	color: transparent;
+  }
+  .cd-nav-trigger span, .cd-nav-trigger span::before, .cd-nav-trigger span::after {
+	/* hamburger icon in CSS */
+	position: absolute;
+	display: inline-block;
+	height: 3px;
+	width: 24px;
+	background: #ffffff;
+  }
+  .cd-nav-trigger span {
+	/* line in the center */
+	position: absolute;
+	top: 50%;
+	right: 5px;
+	margin-top: 10px;
+	-webkit-transition: background 0.2s;
+	-moz-transition: background 0.2s;
+	transition: background 0.2s;
+  }
+  .cd-nav-trigger span::before, .cd-nav-trigger span::after {
+	/* other 2 lines */
+	content: '';
+	right: 0;
+	/* Force Hardware Acceleration in WebKit */
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transform-origin: 0% 50%;
+	-moz-transform-origin: 0% 50%;
+	-ms-transform-origin: 0% 50%;
+	-o-transform-origin: 0% 50%;
+	transform-origin: 0% 50%;
+	-webkit-transition: -webkit-transform 0.2s;
+	-moz-transition: -moz-transform 0.2s;
+	transition: transform 0.2s;
+  }
+  .cd-nav-trigger span::before {
+	/* menu icon top line */
+	top: -6px;
+  }
+  .cd-nav-trigger span::after {
+	/* menu icon bottom line */
+	top: 6px;
+  }
+  .cd-nav-trigger.nav-is-visible span {
+	/* hide line in the center */
+	background: rgba(255, 255, 255, 0);
+  }
+  .cd-nav-trigger.nav-is-visible span::before, .cd-nav-trigger.nav-is-visible span::after {
+	/* keep visible other 2 lines */
+	background: white;
+  }
+  .cd-nav-trigger.nav-is-visible span::before {
+	-webkit-transform: translateX(4px) translateY(-3px) rotate(45deg);
+	-moz-transform: translateX(4px) translateY(-3px) rotate(45deg);
+	-ms-transform: translateX(4px) translateY(-3px) rotate(45deg);
+	-o-transform: translateX(4px) translateY(-3px) rotate(45deg);
+	transform: translateX(4px) translateY(-3px) rotate(45deg);
+  }
+  .cd-nav-trigger.nav-is-visible span::after {
+	-webkit-transform: translateX(4px) translateY(2px) rotate(-45deg);
+	-moz-transform: translateX(4px) translateY(2px) rotate(-45deg);
+	-ms-transform: translateX(4px) translateY(2px) rotate(-45deg);
+	-o-transform: translateX(4px) translateY(2px) rotate(-45deg);
+	transform: translateX(4px) translateY(2px) rotate(-45deg);
+  }
+
+  @media only screen and (min-width: 775px) {
+	.cd-nav-trigger {
+	  display: none;
+	}
+
+  }
