Avance de animaciones en el front-end index.html

--- a/css/style-index.css
+++ b/css/style-index.css
@@ -111,7 +111,10 @@ article
 		padding: 0;
 		background-color:rgba(0, 202, 142, 0.842);
 	}
-	
+	.animateScrollMove{
+		animation: scrollMoveSvg 1s;
+		animation-fill-mode: forwards;
+	}
 	
 
 	.div-title-banner{
@@ -342,3 +345,79 @@ article
 	}
 
   }
+
+
+  /*	Animacion de scroll de img.svg		*/
+
+
+  @keyframes scrollMoveSvg{
+	 0%{
+		 margin: 0px;
+	 }
+	 10%{
+		margin: 3px;
+	}
+	20%{
+		margin: 6px;
+	}
+	30%{
+		margin: 9px;
+	}
+	40%{
+		margin: 12px;
+	}
+	50%{
+		margin: 15px;
+	}
+	60%{
+	   margin: 18px;
+   }
+   70%{
+	   margin: 21px;
+   }
+   80%{
+	   margin: 24px;
+   }
+   90%{
+	   margin: 27px;
+   }
+   100%{
+		margin: 30px;
+   }
+  }
+
+  @keyframes scrollMoveSvgDown{
+	100%{
+		margin: 0px;
+	}
+	90%{
+	   margin: 3px;
+   }
+   80%{
+	   margin: 6px;
+   }
+   70%{
+	   margin: 9px;
+   }
+   60%{
+	   margin: 12px;
+   }
+   50%{
+	   margin: 15px;
+   }
+   40%{
+	  margin: 18px;
+  }
+  30%{
+	  margin: 21px;
+  }
+  20%{
+	  margin: 24px;
+  }
+  10%{
+	  margin: 27px;
+  }
+  0%{
+	   margin: 30px;
+  }
+ }
