cambio de color

--- a/css/style-index.css
+++ b/css/style-index.css
@@ -4,7 +4,8 @@
 }
 
 body{
-	background: rgb(44,49,54);
+	/*background: rgb(44,49,54);*/
+	background-color: red;
 	font-size: 1.6rem;
   	font-family: "Open Sans", sans-serif;
 }#body-help{
