Configuracion de git hub

--- a/css/style-index.css
+++ b/css/style-index.css
@@ -4,8 +4,7 @@
 }
 
 body{
-	/*background: rgb(44,49,54);*/
-	background-color: red;
+	background: rgb(44,49,54);
 	font-size: 1.6rem;
   	font-family: "Open Sans", sans-serif;
 }#body-help{
