reorganización de archivos front-end

--- a/views/404-error.html
+++ b/views/404-error.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-         <meta charset="utf-8">
-         <title>Work Cloud</title>
-         <link href="css/style-index.css" type="text/css" rel="stylesheet">
-         <link rel="shortcut icon" href="img/ico/work-cloud-logo.ico" type="image/x-icon">
-         <meta name="viewport" content="width=device-width,user-scalable=no">
-    </head>
+  <head>
+    <meta charset="utf-8">
+    <title>Work Cloud</title>
+    <link href="../assets/css/style-index.css" type="text/css" rel="stylesheet">
+    <link rel="shortcut icon" href="../assets/img/ico/work-cloud-logo.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
+  </head>
     <body>
       <header>
         <div id="menu-fixed" class="menu-fixed">
-          <dir class="menu-tags">
-              <img class="menu-links logo-nav" src="img/work-cloud-logo.svg" alt="">
+          <div class="menu-tags">
+              <img class="menu-links logo-nav" src="../assets/img/work-cloud-logo.svg" alt="">
 
               <a class="menu-links" href="index.html">Home</a>
-              <a class="menu-links" href="#">Abaout</a>
-              <a class="menu-links" href="#">Documentation</a>
+              <a class="menu-links" href="about.html">About</a>
+              <a class="menu-links" href="documentation.html">Documentation</a>
     
-              <a class="menu-links" id="btnLogin" href="#">Log in</a>
-              <a class="menu-links" id="btnLogin" href="#">Help</a>
+              <a class="menu-links" id="btnLogin" href="login.html">Log in</a>
+              <a class="menu-links" id="btnLogin" href="help.html">Help</a>
               <a href="#0" class="cd-nav-trigger" id="toggle-menu">Menu<span></span></a>
-          </dir>
+          </div>
         </div>
       </header>
 
@@ -29,7 +29,7 @@
           <p class="imput-help p-help" id="p-opss">Opss! pagina en contrucción :(</p>
 
         <div class="col-index transparent">
-                <img src="img/404-error.svg" class="banner-img" alt="">
+                <img src="../assets/img/404-error.svg" class="banner-img" alt="">
         </div> 
       </div>
     
@@ -38,6 +38,6 @@
 
             </div>
         </footer>
-      <script src="js/front-index.js"></script>
+      <script src="../assets/js/front-index.js"></script>
     </body>
 </html>
