--- a/views/help.html
+++ b/views/help.html
@@ -10,17 +10,17 @@
     <body id="body-help">
       <header>
         <div id="menu-fixed" class="menu-fixed">
-          <dir class="menu-tags">
-              <img class="menu-links logo-nav" src="img/work-cloud-logo.svg" alt="">
+          <div class="menu-tags">
+              <img class="menu-links logo-nav" src="../assets/img/work-cloud-logo.svg" alt="">
 
               <a class="menu-links" href="index.html">Home</a>
-              <a class="menu-links" href="#">Abaout</a>
-              <a class="menu-links" href="#">Documentation</a>
+              <a class="menu-links" href="about.html">About</a>
+              <a class="menu-links" href="documentation.html">Documentation</a>
     
-              <a class="menu-links" id="btnLogin" href="#">Log in</a>
-              <a class="menu-links" id="btnLogin" href="#">Help</a>
+              <a class="menu-links" id="btnLogin" href="login.html">Log in</a>
+              <a class="menu-links" id="btnLogin" href="help.html">Help</a>
               <a href="#0" class="cd-nav-trigger" id="toggle-menu">Menu<span></span></a>
-          </dir>
+          </div>
         </div>
       </header>
 
@@ -31,7 +31,7 @@
           <button type="submit" class="searchButton"><i class="fa fa-search"></i></button>
         </form>    
         <div class="col-index transparent">
-                <img id="banner-img-index" src="img/banners/help-banner.svg" class="banner-img" alt="">
+                <img id="banner-img-index" src="../assets/img/banners/help-banner.svg" class="banner-img" alt="">
         </div> 
       </div>
     
@@ -40,6 +40,6 @@
 
             </div>
         </footer>
-      <script src="js/front-index.js"></script>
+      <script src="../assets/js/front-index.js"></script>
     </body>
 </html>
