--- a/views/index.html
+++ b/views/index.html
@@ -3,25 +3,25 @@
     <head>
          <meta charset="utf-8">
          <title>Work Cloud</title>
-         <link href="css/style-index.css" type="text/css" rel="stylesheet">
-         <link rel="shortcut icon" href="img/ico/work-cloud-logo.ico" type="image/x-icon">
+         <link href="../assets/css/style-index.css" type="text/css" rel="stylesheet">
+         <link rel="shortcut icon" href="../assets/img/ico/work-cloud-logo.ico" type="image/x-icon">
          <meta name="viewport" content="width=device-width,user-scalable=no">
     </head>
     <body class="cuerpo">
      
       <header>
         <div id="menu-fixed" class="menu-fixed">
-          <dir class="menu-tags">
-              <img class="menu-links logo-nav" src="img/work-cloud-logo.svg" alt="">
+          <div class="menu-tags">
+              <img class="menu-links logo-nav" src="../assets/img/work-cloud-logo.svg" alt="">
 
               <a class="menu-links" href="index.html">Home</a>
-              <a class="menu-links" href="#">Abaout</a>
-              <a class="menu-links" href="#">Documentation</a>
+              <a class="menu-links" href="about.html">About</a>
+              <a class="menu-links" href="documentation.html">Documentation</a>
     
-              <a class="menu-links" id="btnLogin" href="#">Log in</a>
-              <a class="menu-links" id="btnLogin" href="#">Help</a>
+              <a class="menu-links" id="btnLogin" href="login.html">Log in</a>
+              <a class="menu-links" id="btnLogin" href="help.html">Help</a>
               <a href="#0" class="cd-nav-trigger" id="toggle-menu">Menu<span></span></a>
-          </dir>
+          </div>
         </div>
       </header>
 
@@ -41,7 +41,7 @@
                 <a href="#" class="btn-registro-banner">Registrate</a>
             </div>
           <article class="col-index" id="columna1">
-            <img id="banner-img-index" src="img/banners/index-banner-3.svg" class="banner-img" alt="">
+            <img id="banner-img-index" src="../assets/img/banners/index-banner-3.svg" class="banner-img" alt="">
           </article>
           
           <div class="div-father">
@@ -59,14 +59,14 @@
                 <a href="#" class="btn-registro-banner">Saber mas</a>
             </div>
           <article class="col-index transparent" id="columna1">
-            <img id="banner-img-index-down" src="img/banners/index-banner-4.svg" class="banner-img" alt="">
+            <img id="banner-img-index-down" src="../assets/img/banners/index-banner-4.svg" class="banner-img" alt="">
           </article>
         </div>
 
 
           <article class="card" id="columna2">
             <p class="card-title"><b>Rendimiento en el trabajo</b></p>
-            <img class="img-card-index" src="img/svg-cards/process.svg" alt="">
+            <img class="img-card-index" src="../assets/img/svg-cards/process.svg" alt="">
             <p class="p-card-index">Supervisar el progreso.
               identificar los pasos para cumplir el objetivo
               evaluar que tanto congenia en las tareas
@@ -79,7 +79,7 @@
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Ejecucion de tareas</b></p>
-              <img class="img-card-index" src="img/svg-cards/edit.svg" alt="">
+              <img class="img-card-index" src="../assets/img/svg-cards/edit.svg" alt="">
               <p class="p-card-index">
                 Desglose de tareas
                 verificación de que las tareas cumplan con los objetivos propuestos
@@ -92,21 +92,21 @@
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Almacenamiento</b></p>
-              <img class="img-card-index" src="img/svg-cards/grafics.svg" alt="">
+              <img class="img-card-index" src="../assets/img/svg-cards/grafics.svg" alt="">
               <p class="p-card-index">Cada usuario tendra 15 GB de almacenamiento libre para cumplir con sus responsabilidades en el sistema, el cuál se podra usar de manera libre y sencilla con facil uso.
                 </p>
           </article>
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Progreso rápido</b></p>
-              <img class="img-card-index" src="img/svg-cards/pay.svg" alt="">
+              <img class="img-card-index" src="../assets/img/svg-cards/pay.svg" alt="">
               <p class="p-card-index">Todos los empleados tiene la oportunidad de avanzar y realizar de una manera más eficaz
                  las tareas asignadas a cada uno de ellos.</p>
           </article>
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Diseño y Usabilidad</b></p>
-              <img class="img-card-index" src="img/svg-cards/all personal.svg" alt="">
+              <img class="img-card-index" src="../assets/img/svg-cards/all personal.svg" alt="">
               <p class="p-card-index">Nos enfocamos en un diseño mas minimalista para los usuarios 
                 con una interface mas interactiva para tener una mejor experiencia interactiva
               </p>
@@ -115,7 +115,7 @@
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Soporte</b></p>
-              <img class="img-card-index" src="img/svg-cards/grafics.svg  " alt="">
+              <img class="img-card-index" src="../assets/img/svg-cards/grafics.svg  " alt="">
               <p class="p-card-index">Se le brindará soporte a los usuarios  que permanezcan y usen 
                 la aplicación de manera continua, evitando que e estos tengan problemas y de ser asi, 
                 sean solucionados de manera inmediata.</p>
@@ -136,6 +136,6 @@
                 </div>
           </article>
       </footer>
-      <script src="js/front-index.js"></script>
+      <script src="../assets/js/front-index.js"></script>
     </body>
 </html>
