reconfiguring assets path

--- a/views/statics/404-error.pug
+++ b/views/statics/404-error.pug
@@ -2,13 +2,13 @@ doctype html
 head
   meta(charset='utf-8')
   title Work Cloud
-  link(href='../assets/css/style-index.css', type='text/css', rel='stylesheet')
-  link(rel='shortcut icon', href='../assets/img/ico/work-cloud-logo.ico', type='image/x-icon')
+  link(href='/css/style-index.css', type='text/css', rel='stylesheet')
+  link(rel='shortcut icon', href='/img/ico/work-cloud-logo.ico', type='image/x-icon')
   meta(name='viewport', content='width=device-width,user-scalable=no')
 header
   #menu-fixed.menu-fixed
     .menu-tags
-      img.menu-links.logo-nav(src='../assets/img/work-cloud-logo.svg', alt='')
+      img.menu-links.logo-nav(src='/img/work-cloud-logo.svg', alt='')
       a.menu-links(href='index.html') Home
       a.menu-links(href='about.html') About
       a.menu-links(href='documentation.html') Documentation
@@ -20,7 +20,7 @@ header
 #wrapper
   p#p-opss.imput-help.p-help Opss! pagina en contrucci&oacute;n :(
   .col-index.transparent
-    img.banner-img(src='../assets/img/404-error.svg', alt='')
+    img.banner-img(src='/img/404-error.svg', alt='')
 footer
   article.container.footer
     article.card
@@ -66,4 +66,4 @@ footer
           a.footer-a(href='#')
             p.footer-p.footer-p-bold Work Cloud
           spam.icon.icon-youtube.footer-spam-right
-script(src='../assets/js/front-index.js')
+script(src='/js/front-index.js')
