--- a/views/statics/help.pug
+++ b/views/statics/help.pug
@@ -3,13 +3,13 @@ head
   meta(charset='utf-8')
   title Work Cloud
   link(href='css/style-index.css', type='text/css', rel='stylesheet')
-  link(rel='stylesheet', href='../assets/fonts/demo-files/demo.css')
-  link(rel='shortcut icon', href='img/ico/work-cloud-logo.ico', type='image/x-icon')
+  link(rel='stylesheet', href='/fonts/demo-files/demo.css')
+  link(rel='shortcut icon', href='/img/ico/work-cloud-logo.ico', type='image/x-icon')
   meta(name='viewport', content='width=device-width,user-scalable=no')
 header
   #menu-fixed.menu-fixed
     .menu-tags
-      img.menu-links.logo-nav(src='../assets/img/work-cloud-logo.svg', alt='')
+      img.menu-links.logo-nav(src='/img/work-cloud-logo.svg', alt='')
       a.menu-links(href='index.html') Home
       a.menu-links(href='about.html') About
       a.menu-links(href='documentation.html') Documentation
@@ -25,7 +25,7 @@ header
     button.searchButton(type='submit')
       i.fa.fa-search
   .col-index.transparent
-    img#banner-img-index.banner-img(src='../assets/img/banners/help-banner.svg', alt='')
+    img#banner-img-index.banner-img(src='/img/banners/help-banner.svg', alt='')
 footer
   article.container.footer
     article.card
@@ -71,4 +71,4 @@ footer
           a.footer-a(href='#')
             p.footer-p.footer-p-bold Work Cloud
           spam.icon.icon-youtube.footer-spam-right
-script(src='../assets/js/front-index.js')
+script(src='/js/front-index.js')
