--- a/views/statics/index.pug
+++ b/views/statics/index.pug
@@ -2,19 +2,19 @@ doctype html
 head
   meta(charset='utf-8')
   title Work Cloud
-  link(rel='stylesheet', href='../assets/fonts/demo-files/demo.css')
-  link(href='../assets/css/style-index.css', type='text/css', rel='stylesheet')
-  link(rel='shortcut icon', href='../assets/img/ico/work-cloud-logo.ico', type='image/x-icon')
+  link(rel='stylesheet', href='/fonts/demo-files/demo.css')
+  link(href='/css/style-index.css', type='text/css', rel='stylesheet')
+  link(rel='shortcut icon', href='/img/ico/work-cloud-logo.ico', type='image/x-icon')
   meta(name='viewport', content='width=device-width,user-scalable=no')
 header
   #menu-fixed.menu-fixed
     .menu-tags
-      img.menu-links.logo-nav(src='../assets/img/work-cloud-logo.svg', alt='')
-      a.menu-links(href='index.html') Home
-      a.menu-links(href='about.html') About
-      a.menu-links(href='documentation.html') Documentation
-      a#btnLogin.menu-links(href='login.html') Log in
-      a#btnLogin.menu-links(href='help.html') Help
+      img.menu-links.logo-nav(src='/img/work-cloud-logo.svg', alt='')
+      a.menu-links(href='/') Home
+      a.menu-links(href='/about') About
+      a.menu-links(href='/documentation') Documentation
+      a#btnLogin.menu-links(href='/login') Log in
+      a#btnLogin.menu-links(href='/help') Help
       a#toggle-menu.cd-nav-trigger(href='#0')
         | Menu
         span
@@ -38,9 +38,9 @@ header
         |                 con todo el personal y obtener mejores resultados
         br
         |                 para la empresa y sus trabajadores.
-      a.btn-registro-banner(href='#') Registrate
+      a.btn-registro-banner(href='/register') Registrate
     article#columna1.col-index
-      img#banner-img-index.banner-img(src='../assets/img/banners/index-banner-3.svg', alt='')
+      img#banner-img-index.banner-img(src='/img/banners/index-banner-3.svg', alt='')
     .div-father
       .div-title-banner.right
         p.p-title-banner
@@ -60,13 +60,13 @@ header
           |                 con la diferencia de utilizar otra red social esta misma maneja 
           br
           |                 herramientas especiales para la comunicaci&oacute;n.
-        a.btn-registro-banner(href='#') Saber mas
+        a.btn-registro-banner(href='/more') Saber mas
       article#columna1.col-index.transparent
-        img#banner-img-index-down.banner-img(src='../assets/img/banners/index-banner-4.svg', alt='')
+        img#banner-img-index-down.banner-img(src='/img/banners/index-banner-4.svg', alt='')
     article#columna2.card
       p.card-title
         b Rendimiento en el trabajo
-      img.img-card-index(src='../assets/img/svg-cards/process.svg', alt='')
+      img.img-card-index(src='/img/svg-cards/process.svg', alt='')
       p.p-card-index
         | Supervisar el progreso.
         | identificar los pasos para cumplir el objetivo
@@ -78,7 +78,7 @@ header
     article.card
       p.card-title
         b Ejecucion de tareas
-      img.img-card-index(src='../assets/img/svg-cards/edit.svg', alt='')
+      img.img-card-index(src='/img/svg-cards/edit.svg', alt='')
       p.p-card-index
         | Desglose de tareas
         | verificaci&oacute;n de que las tareas cumplan con los objetivos propuestos
@@ -89,27 +89,27 @@ header
     article#columna3.card
       p.card-title
         b Almacenamiento
-      img.img-card-index(src='../assets/img/svg-cards/grafics.svg', alt='')
+      img.img-card-index(src='/img/svg-cards/grafics.svg', alt='')
       p.p-card-index
         | Cada usuario tendra 15 GB de almacenamiento libre para cumplir con sus responsabilidades en el sistema, el cu&aacute;l se podra usar de manera libre y sencilla con facil uso.
     article#columna3.card
       p.card-title
         b Progreso r&aacute;pido
-      img.img-card-index(src='../assets/img/svg-cards/pay.svg', alt='')
+      img.img-card-index(src='/img/svg-cards/pay.svg', alt='')
       p.p-card-index
         | Todos los empleados tiene la oportunidad de avanzar y realizar de una manera m&aacute;s eficaz
         | las tareas asignadas a cada uno de ellos.
     article#columna3.card
       p.card-title
         b Dise&ntilde;o y Usabilidad
-      img.img-card-index(src='../assets/img/svg-cards/all personal.svg', alt='')
+      img.img-card-index(src='/img/svg-cards/all personal.svg', alt='')
       p.p-card-index
         | Nos enfocamos en un dise&ntilde;o mas minimalista para los usuarios
         | con una interface mas interactiva para tener una mejor experiencia interactiva
     article#columna3.card
       p.card-title
         b Soporte
-      img.img-card-index(src='../assets/img/svg-cards/grafics.svg  ', alt='')
+      img.img-card-index(src='/img/svg-cards/grafics.svg  ', alt='')
       p.p-card-index
         | Se le brindar&aacute; soporte a los usuarios  que permanezcan y usen
         | la aplicaci&oacute;n de manera continua, evitando que e estos tengan problemas y de ser asi,
@@ -170,4 +170,4 @@ footer
           a.footer-a(href='#')
             p.footer-p.footer-p-bold Work Cloud
           spam.icon.icon-youtube.footer-spam-right
-script(src='../assets/js/front-index.js')
+script(src='/js/front-index.js')
