add script time-complete.js

--- a/views/statics/index.pug
+++ b/views/statics/index.pug
@@ -171,3 +171,4 @@ footer
             p.footer-p.footer-p-bold Work Cloud
           spam.icon.icon-youtube.footer-spam-right
 script(src='/js/front-index.js')
+script(src='/js/time-complete.js')
