change rotes with publications/

--- a/src/views/publications.hbs
+++ b/src/views/publications.hbs
@@ -46,7 +46,7 @@
     </div>
     <div class="card-body">
         <blockquote>
-            <form action="/images/{{uniqueId}}/comment" method="POST">
+            <form action="/publications/{{uniqueId}}/comment" method="POST">
                 <div class="form-group">
                     <input type="text" class="form-control transparent-textarea" name="name" placeholder="name" required disabled>
                 </div>
