--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,18 +5,18 @@
         </h3>
     </div>
     <div class="card-body">
-        <form action="/images" method="POST" enctype="multipart/form-data">
+        <form action="/publications" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <div class="imput-group">
                     <div class="custom-file">
-                        <input type="file" name="image" id="inputGroup" aria-describedby="inputGroupFileAddon"
+                        <input type="file" name="publication" id="inputGroup" aria-describedby="inputGroupFileAddon"
                             class="custom-file-input" required>
                         <label class="custom-file-label" for="inputGroupFile">Choose file</label>
 
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="text" name="title" class="form-control" placeholder="Title for the image" required>
+                    <input type="text" name="title" class="form-control" placeholder="Title for the publicatin" required>
                 </div>
                 <div class="form-group">
                     <textarea name="description" id="" rows="2" class="form-control" placeholder="description"
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <button class="btn btn-success">
-                        <i class="fa fa-upload"></i>Upload Image
+                        <i class="fa fa-upload"></i>Upload publicatin
                     </button>
                 </div>
             </div>
@@ -38,16 +38,16 @@
     </div>
     <div class="card-body">
        <div class="row">
-            {{#each postImages }}
+            {{#each postPublications }}
             {{#if (imageHelper filename) }}
                 <div class="col-md-4">
-                    <a href="/images/{{uniqueId}}">
+                    <a href="/publications/{{uniqueId}}">
                         <img src="/public/upload/{{filename}}" alt="" width="100%" height="auto" class="img-thumbnail">
                     </a>    
                 </div>
              {{else}}
              <div class="col-md-4">
-                    <a href="/images/{{uniqueId}}">
+                    <a href="/publications/{{uniqueId}}">
                         <video width="300" height="200"  class="video-fluid z-depth-1" autoplay loop muted>
                             <source src="/public/upload/{{filename}}" type="video/mp4">
                         </video>
