--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -31,6 +31,7 @@
             </div>
             <div class="col-md-6">
                 {{{ body }}}
+                {{>all_publications}}
             </div>
             <div class="col-md-3">
                 {{> groups}}
@@ -39,6 +40,7 @@
         </div>
         <div class="row">
         </div>
+
     </div>
 <script
   src="https://code.jquery.com/jquery-3.3.1.js"
