--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,25 @@
 <div class="card">
     <div class="card-header bg-dark">
+            <h3 class="card-title text-white">
+                <i class="fa fa-bullhorn"></i> Publicar
+            </h3>
+        </div>
+        <div class="card-body">
+            <form class="form-inline">
+    <label class="my-1 mr-2" for="inlineFormCustomSelectPref">tipo de publicacion: </label>
+    <select class="custom-select my-2 mr-sm-5" id="inlineFormCustomSelectPref">
+        <option selected>Que quieres publicar?</option>
+        <option value="1">imagen / video</option>
+        <option value="2">Estado</option>
+        <option value="3">PDF</option>
+        <option value="4">Codigo</option>
+    </select>
+    <button type="submit" class="btn btn-primary my-1">OK</button>
+    </form>
+    </div>
+</div>
+<div class="card" id="pbl-file">
+    <div class="card-header bg-dark">
         <h3 class="card-title text-white">
             <i class="fa fa-image"></i> Upload
         </h3>
