--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -23,10 +23,9 @@
                         required></textarea>
                 </div>
                 <div class="form-group">
-                <div class="btn-group btn-group-justified">
-                    <a href="#" class="btn btn-info">Archivo Foto / Video / Pdf </a>
+                <div class="btn-group p-5 ml-5 btn-group-justified">
+                    <a href="#" class="btn btn-info">Multimedia</a>
                     <a href="#" class="btn btn-primary">Codigo &#60;/&#62;</a>
-                    <a href="#" class="btn btn-primary">Sony</a>
                 </div>
                 <button class="btn btn-success">
                     <i class="fa fa-upload"></i>Upload publicatin
